# OpencvProjects

./: .gitignore
01 TextDetection/src/: basic.py  promote.py  screencap.py
02 AngleMeasurement/: main.py
03 TransForm/: CMakeLists.txt  main.cpp
03 TransForm/transform/: CMakeLists.txt  transform.cpp  transform.h
04 QrReader uncompleted/: main.py
06 PanoramaGenerator/: main.py
07 ColorDetector un/: CMakeLists.txt  detect.cpp  getpicture.cpp  main.cpp  test.cpp
11 Optical Mark Recognition/: pipline.md
11 Optical Mark Recognition/src/: main_cam.py  main_img.py  utilis.py
12 Number Recognization/pytorch/: img.py  net.py  split_dataset.py  test.py  train.py  use.py
12 Number Recognization/pytorch_gray/: dataset.py  net.py  test.py  to_onnx.py  train.py
12 Number Recognization/pytorch_gray/onnx_test/: CMakeLists.txt  test.cpp
12 Number Recognization/tensorflow/: check_module.py  main.ipynb  test.ipynb
